--- a/babel.config.json
+++ b/babel.config.json
@@ -2,12 +2,11 @@
 	sourceType: 'unambiguous',
 	"presets": [
 		"@babel/preset-react",
-		["@babel/preset-env", {"useBuiltIns": "entry", "corejs": {version: 3, proposals: true}}]
+		["@babel/preset-env", {"modules": false, "useBuiltIns": "entry", "corejs": {version: 3, proposals: true}}]
 	],
 	"plugins": [
 		"@babel/plugin-proposal-optional-chaining",
 		"@babel/plugin-proposal-nullish-coalescing-operator",
-		"@babel/plugin-transform-modules-commonjs",
 		"@babel/plugin-proposal-object-rest-spread",
 		"@babel/plugin-transform-runtime",
 		"tailcall-optimization",
@@ -18,7 +17,6 @@
 			"plugins": [
 				"@babel/plugin-proposal-optional-chaining",
 				"@babel/plugin-proposal-nullish-coalescing-operator",
-				"@babel/plugin-transform-modules-commonjs",
 				"@babel/plugin-proposal-object-rest-spread",
 				"@babel/plugin-transform-runtime",
 				"tailcall-optimization",
