--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@statoscope/webpack-plugin": "^5.26.2",
     "blob-stream": "^0.1.3",
     "brfs": "^1.4.3",
     "classnames": "2.2.5",
