--- a/babel.config.json
+++ b/babel.config.json
@@ -2,25 +2,17 @@
 	sourceType: 'unambiguous',
 	"presets": [
 		"@babel/preset-react",
-		["@babel/preset-env", {"modules": false, "useBuiltIns": "entry", "corejs": {version: 3, proposals: true}}]
+		["@babel/preset-env", {"modules": false, "useBuiltIns": "entry", "corejs": 3}]
 	],
 	"plugins": [
-		"@babel/plugin-proposal-optional-chaining",
-		"@babel/plugin-proposal-nullish-coalescing-operator",
-		"@babel/plugin-proposal-object-rest-spread",
 		"@babel/plugin-transform-runtime",
 		"tailcall-optimization",
-		"@babel/plugin-proposal-class-properties",
 	],
 	"env": {
 		"development": {
 			"plugins": [
-				"@babel/plugin-proposal-optional-chaining",
-				"@babel/plugin-proposal-nullish-coalescing-operator",
-				"@babel/plugin-proposal-object-rest-spread",
 				"@babel/plugin-transform-runtime",
 				"tailcall-optimization",
-				"@babel/plugin-proposal-class-properties"
 			]
 		}
 	}
