--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "deck.gl": "^8.9.36",
     "ehmutable": "^1.4.0",
     "fast-deep-equal": "git+ssh://git@github.com/ucscXena/fast-deep-equal.git",
+    "fontkit": "^1.8.1",
     "highcharts": "^6.2.0",
     "iconv-lite": "^0.6.3",
     "jStat": "1.5.3",
@@ -113,7 +114,7 @@
     "lz-string": "^1.5.0",
     "minhash": "0.0.9",
     "normalize.css": "7.0.0",
-    "pdfkit": "^0.11.0",
+    "pdfkit": "^0.14.0",
     "platform": "^1.3.6",
     "postcss": "^6.0.23",
     "postcss-cssnext": "^2.11.0",
