--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
     "optimize-css-assets-webpack-plugin": "^5.0.8",
     "pixelmatch": "^4.0.2",
     "pngjs": "^3.4.0",
+    "postcss": "^7.0.39",
     "postcss-for": "^2.1.1",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^4.2.0",
     "postcss-modules-values": "^1.3.0",
+    "postcss-preset-env": "^6.7.0",
     "raw-loader": "^4.0.2",
     "react-hot-loader": "^4.13.1",
     "react-json-tree": "^0.5.6",
@@ -116,8 +118,6 @@
     "normalize.css": "7.0.0",
     "pdfkit": "^0.14.0",
     "platform": "^1.3.6",
-    "postcss": "^6.0.23",
-    "postcss-cssnext": "^2.11.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.7.1",
