--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "postcss-preset-env": "^6.7.0",
     "raw-loader": "^4.0.2",
     "react-hot-loader": "^4.13.1",
-    "react-json-tree": "^0.5.6",
+    "react-json-tree": "^0.11.2",
     "react-overlays": "^5.2.1",
     "redux-devtools": "^3.1.0",
     "redux-devtools-dock-monitor": "^1.0.1",
@@ -122,7 +122,7 @@
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.7.1",
     "react-iframe": "^1.8.5",
-    "react-material-responsive-grid": "1.2.0",
+    "react-material-responsive-grid": "^1.2.2",
     "react-resizable": "1.8.0",
     "reselect": "^2.5.4",
     "rxjs": "^5.5.12",
