--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "LICENSE",
     "dist"
   ],
+  "engines": {
+    "npm": ">=8.0.0"
+  },
   "author": "Brian Craft",
   "config": {
     "ghooks": {
