--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,8 +54,9 @@ jobs:
     # The following line was run implicitly in your 1.0 builds based on what CircleCI inferred about the structure of your project. In 2.0 you need to be explicit about which commands should be run. In some cases you can discard inferred commands if they are not relevant to your project.
     - run: if [ -z "${NODE_ENV:-}" ]; then export NODE_ENV=test; fi
     - run: export PATH="~/ucscXena/ucsc-xena-client/node_modules/.bin:$PATH"
-    - run: npm --version
     - run: node --version
+    - run: npm install -g npm@8
+    - run: npm --version
     - run: npm install
     # You can remove the conditional and simply install the requirements file you use
     - run:
