--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "homepage": "https://xena.ucsc.edu",
   "main": "index.js",
   "scripts": {
-    "test": "webpack-dev-server --config webpack.test.js --devtool eval --port 8081",
-    "pretest:headless": "webpack --config webpack.karma.js --devtool none",
+    "test": "webpack serve --config webpack.test.js --mode development --port 8081",
+    "pretest:headless": "webpack --config webpack.karma.js",
     "test:headless": "karma start --single-run --browsers ChromeHeadless karma.conf.js build/index.html",
     "lint": "eslint --no-color js/*.js js/*/*.js test/*.js",
     "eslint": "eslint",
     "clean": "rimraf build/*",
     "clean:dist": "rimraf dist/*",
     "start": "npm run start:hot",
-    "start:cold": "webpack-dev-server --devtool eval --progress --colors --history-api-fallback",
-    "start:hot": "webpack-dev-server --config webpack.hot.js --devtool eval-source-map --progress --colors --history-api-fallback",
-    "start:prod": "webpack-dev-server --config webpack.prod.js --devtool source-map --progress --colors --history-api-fallback",
+    "start:cold": "webpack serve --mode development",
+    "start:hot": "webpack serve --config webpack.hot.js --mode development",
+    "start:prod": "webpack serve --config webpack.prod.js --mode production",
     "build": "webpack",
-    "build:prod": "npm run build -- --config webpack.prod.js --devtool source-map",
+    "build:prod": "webpack --config webpack.prod.js --mode production",
     "build:analyze": "npm run -s build:prod -- --profile --json > stats.json",
     "prebuild": "npm run clean",
     "dist": "npm run clean:dist && mkdir -p dist && cp -r js/* dist && NODE_ENV=production babel -d dist js && webpack --config webpack.dist.js",
@@ -48,34 +48,31 @@
     "assert": "^1.5.1",
     "babel-loader": "^8.4.1",
     "babel-plugin-tailcall-optimization": "^2.0.0",
-    "chai": "^3.5.0",
     "css-loader": "^4.3.0",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "csslint": "^0.10.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^4.3.0",
     "eslint-plugin-ucsc-xena-client": "file:eslint-rules",
-    "file-loader": "^6.2.0",
     "ghooks": "^1.3.2",
     "glob": "^7.1.1",
-    "html-webpack-plugin": "^4.5.2",
+    "html-webpack-plugin": "^5.6.3",
     "js-sha1": "^0.6.0",
     "jsverify": "^0.7.5",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.2.0",
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
-    "mini-css-extract-plugin": "^0.10.1",
+    "mini-css-extract-plugin": "^2.9.2",
     "mocha": "^8.1.2",
     "mocha-loader": "^5.1.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.8",
     "pixelmatch": "^4.0.2",
     "pngjs": "^3.4.0",
-    "postcss": "^7.0.39",
+    "postcss": "^8.5.3",
     "postcss-for": "^2.1.1",
-    "postcss-loader": "^4.2.0",
+    "postcss-loader": "^7.3.4",
     "postcss-modules-values": "^1.3.0",
-    "postcss-preset-env": "^6.7.0",
-    "raw-loader": "^4.0.2",
+    "postcss-preset-env": "^10.1.6",
     "react-hot-loader": "^4.13.1",
     "react-json-tree": "^0.11.2",
     "react-overlays": "^5.2.1",
@@ -88,11 +85,10 @@
     "semver": "^5.7.2",
     "source-map-loader": "^1.1.3",
     "style-loader": "^1.3.0",
-    "transform-loader": "^0.2.4",
     "val-loader": "^2.1.2",
-    "webpack": "^4.47.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.3",
+    "webpack": "^5.99.8",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2",
     "worker-loader": "^3.0.8",
     "xss": "^1.0.15"
   },
@@ -102,9 +98,10 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@statoscope/webpack-plugin": "^5.26.2",
+    "@statoscope/webpack-plugin": "^5.29.0",
     "blob-stream": "^0.1.3",
-    "brfs": "^1.6.1",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "classnames": "2.2.5",
     "core-js": "^3.42.0",
     "deck.gl": "^8.9.36",
@@ -119,11 +116,11 @@
     "lz-string": "^1.5.0",
     "minhash": "0.0.9",
     "normalize.css": "7.0.0",
-    "pdfkit": "^0.14.0",
+    "path-browserify": "^1.0.1",
+    "pdfkit": "^0.16.0",
     "platform": "^1.3.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-dropzone": "^11.7.1",
     "react-iframe": "^1.8.5",
     "react-material-responsive-grid": "^1.2.2",
     "react-resizable": "1.8.0",
@@ -132,6 +129,7 @@
     "science": "^1.9.3",
     "showdown": "1.3.0",
     "static-interval-tree": "^1.3.0",
+    "stream-browserify": "^3.0.0",
     "svg-to-pdfkit": "^0.1.8",
     "ucsc-xena-wasm": "^1.12.0",
     "underscore": "^1.13.7",
