--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@
 # configuration as a reference rather than using it in production, though in most
 # cases it should duplicate the execution of your original 1.0 config.
 version: 2
+orbs:
+  browser-tools: circleci/browser-tools@1.4.8
 jobs:
   build:
     working_directory: ~/ucscXena/ucsc-xena-client
@@ -34,10 +36,7 @@ jobs:
     # The following `checkout` command checks out your code to your working directory. In 1.0 we did this implicitly. In 2.0 you can choose where in the course of a job your code should be checked out.
     - run: sudo apt update
     - run: sudo apt-get install libssl-dev python3.10-venv
-    - run:
-        name: Install Chrome
-        command: |
-          curl -sS https://raw.githubusercontent.com/CircleCI-Public/browser-tools-orb/main/src/scripts/install-chrome.sh | bash
+	- browser-tools/install-chrome  # Installs Google Chrome
     - checkout
     # Prepare for artifact and test results  collection equivalent to how it was done on 1.0.
     # In many cases you can simplify this from what is generated here.
