--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,6 +121,8 @@ jobs:
     - image: cimg/node:18.20.8-browsers
     shell: /bin/bash --login
     steps:
+    - run: sudo apt update
+    - run: sudo apt-get install rsync
     - add_ssh_keys:
         fingerprints:
           - "07:16:e6:26:26:57:ff:7b:3e:79:cf:e6:55:57:8b:1d"
@@ -134,6 +136,8 @@ jobs:
     docker:
     - image: cimg/node:18.20.8-browsers
     shell: /bin/bash --login
+    - run: sudo apt update
+    - run: sudo apt-get install rsync
     steps:
     - add_ssh_keys:
         fingerprints:
