--- a/test.template
+++ b/test.template
@@ -4,6 +4,6 @@
     <meta charset="utf-8">
   </head>
   <body id="body">
-	<script src="<%=templateParams.compilation.namedChunks.get('test').files[0]%>"></script>
+	<script src="<%=Array.from(templateParams.compilation.namedChunks.get('test').files)[0]%>"></script>
   </body>
 </html>
