--- a/package.json
+++ b/package.json
@@ -73,7 +73,6 @@
     "postcss-loader": "^7.3.4",
     "postcss-modules-values": "^1.3.0",
     "postcss-preset-env": "^10.1.6",
-    "react-hot-loader": "^4.13.1",
     "react-json-tree": "^0.11.2",
     "react-overlays": "^5.2.1",
     "redux-devtools": "^3.1.0",
@@ -119,6 +118,7 @@
     "path-browserify": "^1.0.1",
     "pdfkit": "^0.16.0",
     "platform": "^1.3.6",
+    "process": "^0.11.10",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-iframe": "^1.8.5",
